--- a/config.pl.sample
+++ b/config.pl.sample
@@ -1,10 +1,9 @@
 {
-    dsn => 'dbi:mysql:hrforecast;hostname=127.0.0.1',
+    dsn => '',
     username => '',
     password => '',
     port => '5127',
     host => '127.0.0.1',
-    front_proxy => [],
+    front_proxy => ['127.0.0.1'],
     allow_from => [],
 };
-
